# tpos

ulleea-hwAnsible/: README.md  Vagrantfile
ulleea-hwAnsible/ansible/: hosts  playbook.yml
ulleea-hwAnsible/ansible/roles/nginx/handlers/: main.yml
ulleea-hwAnsible/ansible/roles/nginx/tasks/: main.yml
ulleea-hwAnsible/ansible/roles/nginx/templates/: static_site.j2
ulleea-hwAnsible/ansible/roles/state/defaults/: main.yml
ulleea-hwAnsible/ansible/roles/state/files/: service_state.json
ulleea-hwAnsible/ansible/roles/state/handlers/: main.yml
ulleea-hwAnsible/ansible/roles/state/meta/: main.yml
ulleea-hwAnsible/ansible/roles/state/tasks/: main.yml
ulleea-hwAnsible/ansible/roles/state/tests/: test.yml
ulleea-hwAnsible/ansible/roles/state/vars/: main.yml
ulleev-hwCI/: .gitlab-ci.yml  04_gitlab_cicd.md  Makefile  Vagrantfile  hosts  playbook.yml  pyproject.toml
ulleev-hwCI/docker/: Dockerbase_Centos  Dockerbase_Ubuntu
ulleev-hwDocker/app/: Dockerfile
ulleev-hwDocker/uploader/: Dockerfile  upload.py
ulleev-hwLinux/: README.md  main.sh  start.py
ullehw-Docker/: README.md  data.csv  docker-compose.yaml
ullehw-Docker/app/: main.py  pyproject.toml
ullehw-Docker/uploader/: pyproject.toml
