[tool.poetry]
name = "pyupgrade"
version = "3.3.1"
description = ""
authors = ["pyupgrade"]


[tool.poetry.dependencies]
python = "^3.8"
covdefaults = "^2.1.0"
pytest = "^7.1.2"
coverage = "^6.5.0"
tokenize-rt = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
