[tool.poetry]
name = "web"
version = "0.1.0"
description = "return table"
authors = ["E.Ulle"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
loguru = "^0.6.0"
psycopg2 = "^2.9.5"
pandas = "^1.5.1"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
