[tool.poetry]
name = "filler"
version = "0.1.0"
description = ""
authors = ["E.Ulle"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.5"
loguru = "^0.6.0"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
